[package]
name = "CURDWithMongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.5.0"
chrono = "0.4.23"
futures = "0.3.26"
mongodb = "2.3.1"
rand = "0.8.5"
serde = "1.0.152"
tokio = "1.25.0"
